WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191177
[MediaStream] enumerateDevices should not expose devices that are not available to getUserMedia
https://bugs.webkit.org/show_bug.cgi?id=191177
Summary
[MediaStream] enumerateDevices should not expose devices that are not availab...
Eric Carlson
Reported
2018-11-01 17:00:25 PDT
enumerateDevices should not expose devices that are not available to getUserMedia. See
https://github.com/w3c/mediacapture-main/issues/549
Attachments
Patch
(20.53 KB, patch)
2018-11-01 17:28 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews106 for mac-sierra-wk2
(3.33 MB, application/zip)
2018-11-01 18:29 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews125 for ios-simulator-wk2
(2.74 MB, application/zip)
2018-11-01 19:16 PDT
,
EWS Watchlist
no flags
Details
Patch
(24.93 KB, patch)
2018-11-02 09:36 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews107 for mac-sierra-wk2
(3.23 MB, application/zip)
2018-11-02 10:41 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-11-01 17:03:37 PDT
<
rdar://problem/45747873
>
Eric Carlson
Comment 2
2018-11-01 17:28:42 PDT
Created
attachment 353667
[details]
Patch
EWS Watchlist
Comment 3
2018-11-01 18:29:05 PDT
Comment on
attachment 353667
[details]
Patch
Attachment 353667
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9823350
New failing tests: imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-default-feature-policy.https.html http/tests/ssl/media-stream/get-user-media-nested.html http/tests/ssl/media-stream/get-user-media-different-host.html
EWS Watchlist
Comment 4
2018-11-01 18:29:07 PDT
Created
attachment 353672
[details]
Archive of layout-test-results from ews106 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 5
2018-11-01 19:15:59 PDT
Comment on
attachment 353667
[details]
Patch
Attachment 353667
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/9823454
New failing tests: imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-default-feature-policy.https.html http/tests/ssl/media-stream/get-user-media-nested.html http/tests/ssl/media-stream/get-user-media-different-host.html
EWS Watchlist
Comment 6
2018-11-01 19:16:01 PDT
Created
attachment 353675
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Eric Carlson
Comment 7
2018-11-02 09:36:29 PDT
Created
attachment 353705
[details]
Patch
EWS Watchlist
Comment 8
2018-11-02 10:41:50 PDT
Comment on
attachment 353705
[details]
Patch
Attachment 353705
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9832606
New failing tests: http/tests/security/anchor-download-block-crossorigin.html
EWS Watchlist
Comment 9
2018-11-02 10:41:51 PDT
Created
attachment 353713
[details]
Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Eric Carlson
Comment 10
2018-11-03 06:04:09 PDT
(In reply to Build Bot from
comment #9
)
> Created
attachment 353713
[details]
> Archive of layout-test-results from ews107 for mac-sierra-wk2 > > The attached test failures were seen while running run-webkit-tests on the > mac-wk2-ews. > Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
This test failure is unrelated.
WebKit Commit Bot
Comment 11
2018-11-03 06:30:37 PDT
Comment on
attachment 353705
[details]
Patch Clearing flags on attachment: 353705 Committed
r237770
: <
https://trac.webkit.org/changeset/237770
>
WebKit Commit Bot
Comment 12
2018-11-03 06:30:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug