[MediaStream] enumerateDevices should not expose devices that are not available to getUserMedia https://bugs.webkit.org/show_bug.cgi?id=191177 <rdar://problem/45747873>

Reviewed by Jer Noble.

Source/WebCore:

Test: http/tests/media/media-stream/enumerate-devices-iframe-allow-attribute.html

* Modules/mediastream/MediaDevicesRequest.cpp:
(WebCore::MediaDevicesRequest::start): Only expose devices that are available to gUM.

* Modules/mediastream/UserMediaController.cpp:
(WebCore::isSecure): Moved from UserMediaRequest.cpp.
(WebCore::isAllowedToUse): Ditto.
(WebCore::UserMediaController::canCallGetUserMedia): Modified from UserMediaRequest.cpp.
(WebCore::UserMediaController::logGetUserMediaDenial): Log reason for denial.
* Modules/mediastream/UserMediaController.h:

* Modules/mediastream/UserMediaRequest.cpp:
(WebCore::UserMediaRequest::start): Use UserMediaController::canCallGetUserMedia.
(WebCore::isSecure): Deleted.
(WebCore::isAllowedToUse): Deleted.
(WebCore::canCallGetUserMedia): Deleted.

LayoutTests:

* http/tests/media/media-stream/enumerate-devices-iframe-allow-attribute-expected.txt: Added.
* http/tests/media/media-stream/enumerate-devices-iframe-allow-attribute.html: Added.
* http/tests/media/media-stream/resources/enumerate-devices-iframe.html: Added.
* http/tests/ssl/media-stream/get-user-media-different-host-expected.txt: Rebased for updated logging.
* http/tests/ssl/media-stream/get-user-media-nested-expected.txt: Ditto.


Canonical link: https://commits.webkit.org/206029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237770 268f45cc-cd09-0410-ab3c-d52691b4dbfc